fix: adjust padding and font size for code elements for better readability

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -95,7 +95,8 @@ code {
   vertical-align: baseline;
   background-color: #eee;
   border-radius: 0;
-  padding: 2px 6px;
+  padding: 0px 4px;
+  font-size: 0.8em;
 }
 
 input[type="radio"] {
